--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-handlebars": "^6.0.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongodb": "^4.2.0",
